<resources>
    <string name="app_name">Homework1</string>
    <string name="title">운봉칼국수</string>
    <string name="address">서울 성북구 삼선교로16길 35</string>
    <string name="phonenumber">02-953-5155</string>
    <string name="time">월-토(11am-9pm)</string>
    <string name="menutitle">메뉴 제목</string>
    <string name="menuprice">메뉴 가격</string>
    <string name="menudescription">메뉴 설명</string>
    <string name="menutitlehint">메뉴 제목 입력</string>
    <string name="menupricehint">메뉴 가격 입력</string>
    <string name="menudescriptionhint">메뉴 설명 입력</string>
    <string name="menuadd">메뉴 추가</string>
    <string name="pluses_restaurant">업소 이름</string>
    <string name="pluses_address">주 소</string>
    <string name="pluses_num">연락처</string>
    <string name="pluses_img">맛집 등록</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
